ipc/ipdl/test/ipdl/error/undeclProtocol.ipdl
//error: protocol `undeclared', managed by `undeclProtocol', has not been declared
//error: constructor declaration required for managed protocol `undeclared' (managed by protocol `undeclProtocol')

protocol undeclProtocol {
    manages undeclared;

child:
    async undeclared();
};
